--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+    "eslint-webpack-plugin": "^3.0.1",
+    "stylelint-webpack-plugin": "^3.0.1"
   }
+
 }
